# Trajectory_assignment_be10x

./: README.md
install/: local_setup.sh  setup.sh
install/trajectory_assignment/lib/trajectory_assignment/: planner_node
install/trajectory_assignment/share/ament_index/resource_index/parent_prefix_path/: trajectory_assignment
install/trajectory_assignment/share/trajectory_assignment/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/trajectory_assignment/share/trajectory_assignment/cmake/: trajectory_assignmentConfig.cmake
log/: latest_build
src/trajectory_assignment/: CMakeLists.txt  README.md  package.xml
src/trajectory_assignment/src/: controller_node.cpp  planner_node.cpp
